--- a/src/app/features/clients/pages/dashboard/dashboard.component.html
+++ b/src/app/features/clients/pages/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
         routerLink="/user/albums"
         class="mt-6 self-start bg-blue-600 text-white text-sm font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition"
       >
-        Ver usuarios
+        Ver albumes
       </a>
     </div>
 
