--- a/src/app/features/public/pages/home/home.component.html
+++ b/src/app/features/public/pages/home/home.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Imagen Hero -->
-    <div class="lg:w-1/2 mb-10 lg:mb-0">
+    <div class="lg:w-1/2 mb-10 m-2 lg:mb-0">
       <img
         src="img/hero.png"
         alt="Cámara profesional en manos de un fotógrafo"
