--- a/src/app/features/clients/pages/dashboard/dashboard.component.html
+++ b/src/app/features/clients/pages/dashboard/dashboard.component.html
@@ -95,7 +95,7 @@
           </li>
           <li>
             <span class="font-medium text-gray-700"> Correo:</span>
-            {{ "soporte@pixsell.com<" }}/li>
+            {{ "soporte@pixsell.com" }}
           </li>
           <li>
             <span class="font-medium text-gray-700">Horario:</span> Lunes a
