--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, span, a, li, button {
-    font-family: Rpboto, sans-serif;
+    font-family: Roboto, sans-serif;
 }
